<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simbot_description</name>
  <version>0.0.0</version>
  <description>simbot Robot Description (URDF) package</description>
  <maintainer email="ralphgna@pacbell.net">ralph</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>navigation2</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>gazebo_ros_pkgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros 
            gazebo_plugin_path="${prefix}/lib"
            gazebo_model_path="${prefix}/..:${prefix}/models:${prefix}/meshes" /> 
  </export>
</package>
