<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simbot_navigation</name>
  <version>0.0.0</version>
  <description>Navigation Configuration for simbot robot</description>
  <maintainer email="ralph@ologicinc.com">ralph</maintainer>
  <license>Comercial</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>

  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_core</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
